# neurocme-high-yield-coach

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cme_core/: __init__.py  chunking.py  extract.py  ingest.py  ingest_pdf.py  ingest_url.py  llm_provider.py  models.py  outputs.py  rank.py  scoring.py  scoring_config.json  topics.py
sample_data/: sample_article.html  sample_chapter.txt
scripts/: install_neurocme_desktop_launcher.sh  launch_neurocme.sh  run_app.sh  run_playwright_smoke.sh  run_ui_smoke.sh
smoke_tests/: test_playwright_ui_smoke.py
streamlit_app/: __init__.py  app.py  ui_components.py  vascular_page.py
tests/: test_core_imports.py  test_outputs.py  test_pdf_ingest.py  test_scoring.py  test_streamlit_ui_smoke.py  test_url_ingest.py  test_vascular_us.py
vascular_us/: __init__.py  doppler.py  ingest.py  measure.py  preprocess.py  report.py  segment.py
